aptosid-settings-desktop (20241216.4) UNRELEASED; urgency=medium

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Kel Modderman ]
  * setup_xfce4_wallpaper: wait for up to 10 seconds to set wallpaper.
  * aptosid-settings-xfce: add depends on aptosid-settings-qt-gtk.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 16 Dec 2024 23:31:27 +0100

aptosid-settings-desktop (20241216.3) unstable; urgency=medium

  * xfce4: defer wallpaper configuration to /etc/xdg/autostart script.

 -- Kel Modderman <kelvmod@gmail.com>  Mon, 16 Dec 2024 23:04:59 +1000

aptosid-settings-desktop (20241216.2) unstable; urgency=medium

  * Provide setup_xfce4 script in an attempt to set some defaults.

 -- Kel Modderman <kelvmod@gmail.com>  Mon, 16 Dec 2024 23:04:14 +1000

aptosid-settings-desktop (20241216.1) unstable; urgency=medium

  * gnome.gschema.override: set icon, gtk theme and accent color.
  * Set picture-options='zoom' universally when setting background.
  * Reinstate QT_QPA_PLATFORMTHEME=gtk2.

 -- Kel Modderman <kelvmod@gmail.com>  Mon, 16 Dec 2024 17:24:27 +1000

aptosid-settings-desktop (20241215.2) unstable; urgency=medium

  [ Kel Modderman ]
  * Remove QT_QPA_PLATFORMTHEME=gtk2 from env.d snippet as it is not
    relevant in wayland environments.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 16 Dec 2024 00:37:21 +0100

aptosid-settings-desktop (20241215.1) unstable; urgency=medium

  * Initial release.

 -- Kel Modderman <kelvmod@gmail.com>  Sun, 15 Dec 2024 20:34:38 +1000