@@ -1,3 +1,6 @@
 schemas/*_aptosid-settings-xfce.gschema.override usr/share/glib-2.0/schemas
 xdg/xfce-mimeapps.list etc/xdg
 xfce4/* usr/share/aptosid-settings-xfce
+xfce4-desktop/* etc/skel/.config/xfce4/xfconf/xfce-perchannel-xml
+
+
