@@ -6,6 +6,7 @@ aptosid-settings-desktop (20241216.4) UNRELEASED; urgency=medium
   [ Kel Modderman ]
   * setup_xfce4_wallpaper: wait for up to 10 seconds to set wallpaper.
   * aptosid-settings-xfce: add depends on aptosid-settings-qt-gtk.
+  * aptosid-settings-xfce: add xfce4-desktop.xml defaults.
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 16 Dec 2024 23:31:27 +0100
 
